--- a/.github/workflows/db-backup.yml
+++ b/.github/workflows/db-backup.yml
@@ -12,9 +12,8 @@ env:
   zip_pass: ${{ secrets.ZIP_PASS }}
   tg_bot_token: ${{ secrets.TG_BOT_TOKEN }}
   tg_chat_id: ${{ secrets.TG_CHAT_ID }}
-  CONFIGFILE_VERSION: ${{ secrets.OAUTH_REFRESH_TOKEN }}
-  OAUTH_APP_KEY: ${{ secrets.OAUTH_REFRESH_TOKEN }}
-  OAUTH_APP_SECRET: ${{ secrets.OAUTH_REFRESH_TOKEN }}
+  OAUTH_APP_KEY: ${{ secrets.OAUTH_APP_KEY }}
+  OAUTH_APP_SECRET: ${{ secrets.OAUTH_APP_SECRET }}
   OAUTH_REFRESH_TOKEN: ${{ secrets.OAUTH_REFRESH_TOKEN }}
 
 jobs:
