--- a/.github/workflows/db-backup.yml
+++ b/.github/workflows/db-backup.yml
@@ -23,8 +23,10 @@ jobs:
       - uses: szenius/set-timezone@v2.0
         with:
           timezoneLinux: "Asia/Kolkata"
-      - name: Install Dependencies
+      - name: Install PostgreSQL Client 16
         run: |
+          sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
+          wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
           sudo apt-get update
           sudo apt-get install -y postgresql-client-16
       - name: Run Shell Script
