--- a/.github/workflows/db-backup.yml
+++ b/.github/workflows/db-backup.yml
@@ -25,10 +25,10 @@ jobs:
           timezoneLinux: "Asia/Kolkata"
       - name: Install PostgreSQL Client 16
         run: |
-          sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
-          wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo apt-key add -
-          sudo apt-get update
-          sudo apt-get install -y postgresql-client-16
+          sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
+          wget -qO- https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo tee /etc/apt/trusted.gpg.d/pgdg.asc &>/dev/null
+          sudo apt update
+          sudo apt install -y postgresql
       - name: Run Shell Script
         id: shell_script_run
         run: bash ./db-backup.sh
