--- a/.github/workflows/db-backup.yml
+++ b/.github/workflows/db-backup.yml
@@ -31,6 +31,9 @@ jobs:
           wget -qO- https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo tee /etc/apt/trusted.gpg.d/pgdg.asc &>/dev/null
           sudo apt update
           sudo apt install -y postgresql
+      - name: Import PGP Key
+        run: |
+          echo "${{ secrets.PGP_KEY }}" | gpg --import
       - name: Run Shell Script
         id: shell_script_run
         run: bash ./db-backup.sh
